--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -61,6 +63,8 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   position: relative;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 /* Fixed anatomical heart background */
